Card One Responsive 375px , 425px and 768px

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link href="assets/img/favicon.ico" rel="shortcut icon"/>
 		
 		<!-- =============== Viewport =============== -->
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<!-- =============== Description =============== -->
 		<meta name="description" content="" />
@@ -30,6 +30,10 @@
 		
 		<!-- =============== Main_CSS =============== -->
 		<link rel="stylesheet" href="assets/css/style.css"/>
+
+		<!-- responsive css  -->
+
+		<link rel="stylesheet" href="assets/css/responsive.css"/>
 		
 	</head>
 	<body>
@@ -40,7 +44,7 @@
 		<section class="card-one">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8 offset-md-2">
+					<div class="col-md-8 offset-md-2 col-12">
 						<div class="card-one-box">
 							<div class="card-one-title">
 								<h6>Hi Nahid</h6>
