--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<link href="assets/img/favicon.ico" rel="shortcut icon"/>
 		
 		<!-- =============== Viewport =============== -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		
 		<!-- =============== Description =============== -->
 		<meta name="description" content="" />
