New section add called subscribe later

--- a/index.html
+++ b/index.html
@@ -67,8 +67,35 @@
 		
 		<div class="section-break"></div>
 		
+		<section class="card-tow">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 offset-md-4 col-12">
+						<div class="card-tow-section-box">
+							<h6><a href="#"><i class="fas fa-times"></i></a></h6>
+							<h5 class="box-top-title">DON’T MISS OUT THE LATEST</h5>
+							<h3 class="card-towpbox-title">Weekly FREE UI resources straight to your inbox</h3>
+						</div>
+						<div class="card-tow-section-input">
+							<input type="text" placeholder="Enter your email address" class="form-control card-tow-input">
+							<button type="button" class="btn ">Stay Inspired</button>
+							<p class="sub-leater">Or subscribe using</p>
+							<div class="social-btn-apir">
+								<a href="#"><i class="fab fa-google"></i></a>
+								<a href="#"><i class="fab fa-twitter"></i></a>
+								<a href="#"><i class="fab fa-facebook"></i></a>
+							</div>
+						</div>
+						
+					</div>
+				</div>
+			</div>
+		</section>
 		
-		
+
+		<div class="section-break"></div>
+
+
 		
 		<!-- =============== jquery-3.3.1.min.js =============== -->
 		<script src="assets/js/jquery-3.3.1.min.js"></script>
